[gd_scene load_steps=21 format=4 uid="uid://cjg8hlehfw02w"]

[ext_resource type="Script" path="res://interface/interactors/main_menus_scene.gd" id="1_2rt8a"]
[ext_resource type="Script" path="res://interface/animators/ui_background.gd" id="2_a5acc"]
[ext_resource type="Texture2D" uid="uid://b5vh0nswyrv70" path="res://assets/backgrounds/bg-main.png" id="3_2cpjf"]
[ext_resource type="PackedScene" uid="uid://cpj5rph2x2wgj" path="res://interface/runtime/overlay/medal_unlocked_popup.tscn" id="4_xvmyf"]
[ext_resource type="PackedScene" uid="uid://d2hyhl2j3cera" path="res://interface/menus/menu_title_screen.tscn" id="5_nf347"]
[ext_resource type="PackedScene" uid="uid://p28ce2q4mws" path="res://interface/menus/menu_board_select.tscn" id="6_t1hg8"]
[ext_resource type="PackedScene" uid="uid://di8et7u8v2hel" path="res://interface/menus/menu_credits.tscn" id="7_mgwmq"]
[ext_resource type="Script" path="res://world/containers/container_tilemaps.gd" id="8_aknky"]
[ext_resource type="TileSet" uid="uid://dsk4kuh8k4bve" path="res://core/resources/tileset/tileset_world_02.tres" id="9_ilaip"]
[ext_resource type="Texture2D" uid="uid://b0kqtj21y0y7f" path="res://core/resources/visuals/gradient_stage_checkboard_shadow.tres" id="10_otgqf"]
[ext_resource type="Script" path="res://object/scripts/node_body.gd" id="11_g01xb"]
[ext_resource type="Script" path="res://world/world/stage_light.gd" id="11_j4bhm"]
[ext_resource type="PackedScene" uid="uid://dbvbelcosunmx" path="res://object/objects/obj_block.tscn" id="12_vfbvm"]

[sub_resource type="Gradient" id="Gradient_1gdm8"]
offsets = PackedFloat32Array(0.4, 0.786885, 1)
colors = PackedColorArray(0.25, 0.25, 0.25, 1, 0.05, 0.05, 0.05, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yg8jw"]
gradient = SubResource("Gradient_1gdm8")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.506716)

[sub_resource type="Gradient" id="Gradient_28xec"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uo703"]
gradient = SubResource("Gradient_28xec")

[sub_resource type="FontVariation" id="FontVariation_n18tc"]
spacing_top = -2
spacing_bottom = -2

[sub_resource type="LabelSettings" id="LabelSettings_kf4b7"]
font = SubResource("FontVariation_n18tc")
font_size = 22
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.25)
shadow_offset = Vector2(4, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2u48"]
size = Vector2(15.8823, 134.118)

[node name="MainMenusScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2rt8a")

[node name="UICam" type="Camera2D" parent="."]
anchor_mode = 0

[node name="BG" type="CanvasLayer" parent="."]
process_mode = 3
layer = -10
script = ExtResource("2_a5acc")

[node name="Texture1" type="Node2D" parent="BG"]
unique_name_in_owner = true
position = Vector2(480, 360)

[node name="Texture2" type="Node2D" parent="BG/Texture1"]
unique_name_in_owner = true

[node name="TextureRect" type="TextureRect" parent="BG/Texture1/Texture2"]
unique_name_in_owner = true
self_modulate = Color(0.45, 0.25, 0.45, 1)
light_mask = 4
offset_left = -898.0
offset_top = -720.0
offset_right = 902.0
offset_bottom = 720.0
scale = Vector2(0.83, 0.83)
pivot_offset = Vector2(900, 720)
texture = ExtResource("3_2cpjf")

[node name="TitleScreen" parent="." instance=ExtResource("5_nf347")]
visible = false

[node name="MenuStageSelect" parent="." instance=ExtResource("6_t1hg8")]
visible = false

[node name="MenuCredits" parent="." instance=ExtResource("7_mgwmq")]
visible = false

[node name="BoardWorld" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="BoardWorld"]
position = Vector2(495.5, 315.5)
scale = Vector2(13.3594, 10.5469)
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_yg8jw")
script = ExtResource("11_j4bhm")

[node name="PointLight2D2" type="PointLight2D" parent="BoardWorld"]
position = Vector2(1496.75, 360.5)
scale = Vector2(10.8984, 10.5469)
range_item_cull_mask = 2
texture = ExtResource("10_otgqf")
script = ExtResource("11_j4bhm")

[node name="TM" type="Node2D" parent="BoardWorld"]
scale = Vector2(0.85, 0.85)
script = ExtResource("8_aknky")

[node name="Checkerboard" type="TileMapLayer" parent="BoardWorld/TM"]
unique_name_in_owner = true
self_modulate = Color(0.7, 0.7, 0.735, 1)
light_mask = 2
tile_map_data = PackedByteArray("AAAGAAcABwAAAAAAAAAHAAcABwABAAAAAAAGAAUABwAAAAAAAAAGAAYABwAAAAEAAAAHAAUABwABAAAAAAAHAAYABwABAAEAAAAFAAUABwABAAAAAAAFAAYABwABAAEAAAAIAAcABwAAAAAAAAAIAAUABwAAAAAAAAAIAAYABwAAAAEAAAAJAAUABwABAAAAAAAJAAYABwAAAAAAAAAIAAMABwABAAEAAAAIAAQABwAAAAEAAAAJAAMABwAAAAEAAAAJAAQABwABAAEAAAAGAAMABwABAAEAAAAGAAQABwAAAAEAAAAHAAMABwAAAAEAAAAHAAQABwABAAEAAAAEAAMABwABAAEAAAAEAAQABwABAAAAAAAFAAMABwAAAAEAAAAFAAQABwABAAEAAAADAAQABwAAAAAAAAADAAIABwAAAAAAAAADAAMABwAAAAEAAAAEAAIABwABAAAAAAADAAAABwAAAAAAAAADAAEABwAAAAEAAAAEAAAABwABAAAAAAAEAAEABwABAAEAAAAFAAAABwAAAAAAAAAFAAEABwAAAAEAAAAGAAAABwABAAAAAAAGAAEABwABAAEAAAAHAAAABwAAAAAAAAAHAAEABwAAAAEAAAAIAAAABwABAAAAAAAIAAEABwABAAEAAAAJAAAABwAAAAAAAAAJAAEABwAAAAEAAAAKAAAABwABAAAAAAAKAAEABwABAAEAAAALAAAABwAAAAAAAAALAAEABwAAAAEAAAAMAAAABwABAAAAAAAMAAEABwABAAEAAAANAAAABwAAAAAAAAANAAEABwAAAAEAAAAOAAAABwABAAAAAAAOAAEABwABAAEAAAANAAIABwAAAAAAAAAOAAIABwABAAAAAAALAAIABwAAAAAAAAAMAAIABwABAAAAAAAJAAIABwAAAAAAAAAKAAIABwABAAAAAAAHAAIABwAAAAAAAAAIAAIABwABAAAAAAAFAAIABwAAAAAAAAAGAAIABwABAAAAAAAFAAcABwABAAIAAAACAAQABwABAAIAAAACAAIABwABAAIAAAACAAMABwABAAMAAAACAAAABwABAAIAAAACAAEABwABAAMAAAAKAAUABwABAAEAAAAKAAYABwABAAIAAAALAAUABwACAAEAAAALAAYABwACAAIAAAAMAAUABwABAAEAAAAMAAYABwABAAIAAAAEAAUABwABAAEAAAAEAAYABwABAAIAAAAEAAcABwABAAMAAAAPAAAABQAAAAEAAAAPAAEABQAAAAIAAAAPAAIABQAAAAEAAAAPAAMABQAAAAIAAAAQAAAABQABAAEAAAAQAAEABQABAAIAAAAQAAIABQABAAEAAAAQAAMABQABAAIAAAARAAAABQAAAAEAAAARAAEABQAAAAIAAAARAAIABQAAAAEAAAARAAMABQAAAAIAAAASAAEABQABAAIAAAASAAIABQABAAEAAAASAAMABQABAAIAAAAPAAQABQAAAAEAAAAPAAUABQAAAAIAAAAQAAQABQABAAEAAAAQAAUABQABAAIAAAARAAQABQAAAAEAAAARAAUABQAAAAIAAAASAAQABQABAAEAAAASAAUABQABAAIAAAARAAYABQAAAAEAAAARAAcABQAAAAIAAAASAAYABQABAAEAAAASAAcABQABAAIAAAATAAYABQAAAAEAAAATAAcABQAAAAIAAAAUAAYABQABAAEAAAAUAAcABQABAAIAAAATAAIABQAAAAEAAAATAAMABQAAAAIAAAATAAQABQAAAAEAAAATAAUABQAAAAIAAAAUAAIABQABAAEAAAAUAAMABQABAAIAAAAUAAQABQABAAEAAAAUAAUABQABAAIAAAAVAAIABQAAAAEAAAAVAAMABQAAAAIAAAAVAAQABQAAAAEAAAAVAAUABQAAAAIAAAAWAAIABQABAAEAAAAWAAMABQABAAIAAAAWAAQABQABAAEAAAAWAAUABQABAAIAAAATAAEABQAAAAIAAAAUAAEABQABAAIAAAAVAAEABQAAAAIAAAAWAAEABQABAAIAAAAXAAEABQAAAAIAAAAXAAIABQAAAAEAAAAXAAMABQAAAAIAAAAXAAQABQAAAAEAAAAXAAUABQAAAAIAAAAPAAYABQAAAAEAAAAQAAYABQABAAEAAAAVAAYABQAAAAEAAAAWAAYABQABAAEAAAAXAAYABQAAAAEAAAARAAgABQAAAAEAAAASAAgABQABAAEAAAATAAgABQAAAAEAAAAUAAgABQABAAEAAAA=")
tile_set = ExtResource("9_ilaip")

[node name="Outline" type="TileMapLayer" parent="BoardWorld/TM"]
tile_map_data = PackedByteArray("AAABAAAAAQALAAIAAAAAAAAAAQAJAAIAAAABAAEAAQALAAIAAAABAAIAAQALAAIAAAADAAgAAQAGAAEAAAAEAAgAAQAKAAAAAAAFAAgAAQAKAAAAAAAGAAgAAQAKAAAAAAAHAAgAAQAKAAAAAAAIAAgAAQAKAAAAAAAJAAgAAQAFAAEAAAAJAAcAAQAIAAAAAAAKAAcAAQAKAAAAAAALAAcAAQAKAAAAAAAMAAcAAQAKAAAAAAANAAcAAQAFAAEAAAANAAYAAQAIAAEAAAANAAUAAQAIAAEAAAANAAQAAQAFAAIAAAAMAAQAAQAJAAMAAAALAAQAAQAJAAMAAAAKAAQAAQAIAAMAAAAKAAMAAQAIAAAAAAALAAMAAQAKAAAAAAAMAAMAAQAKAAAAAAANAAMAAQAKAAAAAAAOAAMAAQALAAAAAAAOAAQAAQALAAIAAAAOAAUAAQALAAIAAAAOAAYAAQALAAIAAAAOAAcAAQAGAAEAAAAPAAcAAQAKAAAAAAAQAAcAAQALAAAAAAAQAAgAAQALAAIAAAAQAAkAAQAGAAEAAAARAAkAAQAKAAAAAAASAAkAAQAKAAAAAAATAAkAAQAKAAAAAAAUAAkAAQAKAAAAAAAVAAkAAQAFAAEAAAAVAAgAAQAIAAEAAAAVAAcAAQAIAAAAAAAWAAcAAQAKAAAAAAAXAAcAAQAKAAAAAAAYAAcAAQAFAAEAAAAYAAYAAQAIAAEAAAAYAAUAAQAIAAEAAAAYAAQAAQAIAAEAAAAYAAMAAQAIAAEAAAAYAAIAAQAIAAEAAAAYAAEAAQAIAAEAAAAYAAAAAQAFAAIAAAAXAAAAAQAJAAMAAAAWAAAAAQAJAAMAAAAVAAAAAQAJAAMAAAAUAAAAAQAJAAMAAAATAAAAAQAJAAMAAAASAAAAAQAIAAMAAAD//wUAAQAJAAIAAAD//wYAAQAJAAIAAAD//wcAAQAJAAIAAAD//wgAAQAJAAIAAAAAAAgAAQAJAAIAAAABAAgAAQAJAAIAAAACAAgAAQAJAAIAAAAAAAcAAQAJAAIAAAAAAAIAAQAJAAIAAAAAAAEAAQAJAAIAAAD//wQAAQAJAAIAAAD//wMAAQAJAAIAAAD//wIAAQAJAAIAAAD//wEAAQAJAAIAAAD//wAAAQAJAAIAAAD/////AQAJAAIAAAAKAAgAAQAJAAIAAAALAAgAAQAJAAIAAAAMAAgAAQAJAAIAAAANAAgAAQAJAAIAAAAOAAgAAQAJAAIAAAAPAAgAAQAJAAIAAAAPAAkAAQAJAAIAAAAOAAkAAQAJAAIAAAANAAkAAQAJAAIAAAAMAAkAAQAJAAIAAAALAAkAAQAJAAIAAAAKAAkAAQAJAAIAAAAJAAkAAQAJAAIAAAAIAAkAAQAJAAIAAAAHAAkAAQAJAAIAAAAGAAkAAQAJAAIAAAAFAAkAAQAJAAIAAAAEAAkAAQAJAAIAAAADAAkAAQAJAAIAAAACAAkAAQAJAAIAAAABAAkAAQAJAAIAAAAAAAkAAQAJAAIAAAD//wkAAQAJAAIAAAD//woAAQAJAAIAAAAAAAoAAQAJAAIAAAAWAAgAAQAJAAIAAAAXAAgAAQAJAAIAAAAYAAgAAQAJAAIAAAAZAAgAAQAJAAIAAAAaAAgAAQAJAAIAAAAbAAgAAQAJAAIAAAAbAAcAAQAJAAIAAAAbAAYAAQAJAAIAAAAbAAUAAQAJAAIAAAAbAAQAAQAJAAIAAAAbAAMAAQAJAAIAAAAbAAIAAQAJAAIAAAAbAAEAAQAJAAIAAAAbAAAAAQAJAAIAAAAaAAAAAQAJAAIAAAAaAP//AQAJAAIAAAAZAP//AQAJAAIAAAAYAP//AQAJAAIAAAAXAP//AQAJAAIAAAAWAP//AQAJAAIAAAAVAP//AQAJAAIAAAAUAP//AQAJAAIAAAATAP//AQAJAAIAAAAZAAAAAQAJAAIAAAAZAAEAAQAJAAIAAAAZAAIAAQAJAAIAAAAaAAIAAQAJAAIAAAAaAAMAAQAJAAIAAAAaAAQAAQAJAAIAAAAaAAUAAQAJAAIAAAAaAAYAAQAJAAIAAAAaAAcAAQAJAAIAAAAYAAkAAQAJAAIAAAAXAAkAAQAJAAIAAAAWAAkAAQAJAAIAAAAZAAkAAQAJAAIAAAAaAAkAAQAJAAIAAAAbAAkAAQAJAAIAAAAZAAcAAQAJAAIAAAAZAAYAAQAJAAIAAAAZAAUAAQAJAAIAAAAZAAQAAQAJAAIAAAAZAAMAAQAJAAIAAAAaAAEAAQAJAAIAAAAbAP//AQAJAAIAAAAVAAoAAQAJAAIAAAAUAAoAAQAJAAIAAAATAAoAAQAJAAIAAAASAAoAAQAJAAIAAAARAAoAAQAJAAIAAAAQAAoAAQAJAAIAAAAPAAoAAQAJAAIAAAAWAAoAAQAJAAIAAAABAAUAAQAGAAEAAAACAAUAAQAKAAAAAAABAAMAAQALAAIAAAAAAAMAAQAJAAIAAAAAAAQAAQAJAAIAAAAAAAUAAQAJAAIAAAAAAAYAAQAJAAIAAAABAAYAAQAJAAIAAAACAAYAAQAJAAIAAAADAAYAAQALAAIAAAADAAUAAQALAAAAAAABAAQAAQALAAIAAAABAAcAAQAJAAIAAAACAAcAAQAJAAIAAAADAAcAAQALAAIAAAABAP//AQAGAAIAAAACAP//AQAJAAMAAAADAP//AQAJAAMAAAAEAP//AQAJAAMAAAAFAP//AQAJAAMAAAAGAP//AQAJAAMAAAAHAP//AQAJAAMAAAAIAP//AQAJAAMAAAAJAP//AQAJAAMAAAAKAP//AQAJAAMAAAALAP//AQAJAAMAAAALAP7/AQAJAAIAAAAMAP7/AQAJAAIAAAANAP7/AQAJAAIAAAAOAP7/AQAJAAIAAAAOAP//AQAJAAMAAAAPAP//AQAJAAMAAAAQAP//AQAJAAMAAAARAP//AQAJAAMAAAASAP//AQAFAAIAAAANAP//AQAJAAMAAAAMAP//AQAJAAMAAAAAAP//AQAJAAIAAAAAAP7/AQAJAAIAAAABAP7/AQAJAAIAAAACAP7/AQAJAAIAAAADAP7/AQAJAAIAAAAEAP7/AQAJAAIAAAAFAP7/AQAJAAIAAAAGAP7/AQAJAAIAAAAHAP7/AQAJAAIAAAAIAP7/AQAJAAIAAAAJAP7/AQAJAAIAAAAKAP7/AQAJAAIAAAAPAP7/AQAJAAIAAAAQAP7/AQAJAAIAAAARAP7/AQAJAAIAAAASAP7/AQAJAAIAAAATAP7/AQAJAAIAAAAUAP7/AQAJAAIAAAA=")
tile_set = ExtResource("9_ilaip")

[node name="BoardSelectTM" type="Node2D" parent="BoardWorld"]
position = Vector2(0, 720)
scale = Vector2(0.85, 0.85)
script = ExtResource("8_aknky")

[node name="Checkerboard1" type="TileMapLayer" parent="BoardWorld/BoardSelectTM"]
unique_name_in_owner = true
self_modulate = Color(0.769, 0.769, 0.769, 1)
light_mask = 2
tile_map_data = PackedByteArray("AAAAAAAABwACAAAAAAAAAAEABwACAAEAAAABAAAABwADAAAAAAABAAEABwADAAEAAAACAAAABwACAAAAAAACAAEABwACAAEAAAADAAAABwADAAAAAAADAAEABwADAAEAAAAEAAAABwACAAAAAAAEAAEABwACAAEAAAAFAAAABwADAAAAAAAFAAEABwADAAEAAAAGAAAABwACAAAAAAAHAAAABwADAAAAAAAAAAIABwACAAAAAAABAAIABwADAAAAAAA=")
tile_set = ExtResource("9_ilaip")

[node name="Outline" type="TileMapLayer" parent="BoardWorld/BoardSelectTM"]
tile_map_data = PackedByteArray("AAAAAAMAAQAKAAAAAAABAAMAAQAKAAAAAAACAAMAAQAFAAEAAAACAAIAAQAIAAAAAAADAAIAAQAKAAAAAAAEAAIAAQAKAAAAAAAFAAIAAQAKAAAAAAAGAAIAAQAFAAEAAAAGAAEAAQAIAAAAAAAHAAEAAQAKAAAAAAAIAAEAAQAFAAEAAAAIAAAAAQAIAAEAAAD//wMAAQAJAAIAAAAIAP//AQAJAAIAAAD//wQAAQAJAAIAAAAAAAQAAQAJAAIAAAABAAQAAQAJAAIAAAACAAQAAQAJAAIAAAADAAQAAQAJAAIAAAADAAMAAQAJAAIAAAAEAAMAAQAJAAIAAAAFAAMAAQAJAAIAAAAGAAMAAQAJAAIAAAAHAAMAAQAJAAIAAAAHAAIAAQAJAAIAAAAIAAIAAQAJAAIAAAAJAAIAAQAJAAIAAAAJAAEAAQAJAAIAAAAJAAAAAQAJAAIAAAAJAP//AQAJAAIAAAAIAAMAAQAJAAIAAAA=")
tile_set = ExtResource("9_ilaip")

[node name="BoardSelectTM2" type="Node2D" parent="BoardWorld"]
position = Vector2(0, 720)
scale = Vector2(0.85, 0.85)
script = ExtResource("8_aknky")

[node name="Checkerboard2" type="TileMapLayer" parent="BoardWorld/BoardSelectTM2"]
unique_name_in_owner = true
self_modulate = Color(0.625, 0.625, 0.625, 1)
light_mask = 2
tile_map_data = PackedByteArray("AAALAAcABgAAAAAAAAALAAgABgAAAAEAAAALAAkABgAAAAIAAAALAAoABgABAAAAAAAMAAcABgABAAAAAAAMAAgABgABAAEAAAAMAAkABgABAAIAAAAMAAoABgACAAAAAAANAAcABgACAAAAAAANAAgABgACAAEAAAANAAkABgACAAIAAAANAAoABgABAAAAAAAJAAgABgABAAAAAAAJAAkABgABAAEAAAAKAAgABgACAAAAAAAKAAkABgACAAEAAAAHAAgABgABAAAAAAAHAAkABgACAAAAAAAIAAgABgACAAAAAAAIAAkABgACAAEAAAAGAAkABgABAAAAAAAGAAoABgACAAAAAAAHAAoABgABAAAAAAAFAAoABgABAAAAAAAFAAsABgABAAEAAAAGAAsABgACAAEAAAAHAAsABgABAAEAAAAIAAoABgACAAAAAAAIAAsABgACAAEAAAAJAAoABgABAAAAAAAJAAsABgABAAEAAAAKAAoABgACAAAAAAAKAAsABgACAAEAAAALAAsABgABAAEAAAAMAAsABgACAAEAAAA=")
tile_set = ExtResource("9_ilaip")

[node name="Outline" type="TileMapLayer" parent="BoardWorld/BoardSelectTM2"]
tile_map_data = PackedByteArray("AAAEAAsAAQALAAMAAAAEAAoAAQALAAIAAAAEAAkAAQAGAAIAAAAFAAkAAQALAAMAAAAFAAgAAQAGAAIAAAAGAAgAAQALAAMAAAAGAAcAAQAGAAIAAAAHAAcAAQAJAAMAAAAIAAcAAQAJAAMAAAAJAAcAAQAJAAMAAAAKAAcAAQALAAMAAAAKAAYAAQAGAAIAAAALAAYAAQAJAAMAAAAMAAYAAQAJAAMAAAANAAYAAQALAAMAAAANAAUAAQAJAAIAAAAMAAUAAQAJAAIAAAALAAUAAQAJAAIAAAAKAAUAAQAJAAIAAAAJAAUAAQAJAAIAAAAJAAYAAQAJAAIAAAAIAAYAAQAJAAIAAAAHAAYAAQAJAAIAAAAGAAYAAQAJAAIAAAAFAAcAAQAJAAIAAAAEAAgAAQAJAAIAAAADAAoAAQAJAAIAAAADAAkAAQAJAAIAAAADAAgAAQAJAAIAAAAFAAYAAQAJAAIAAAAEAAcAAQAJAAIAAAADAAsAAQAJAAIAAAADAAcAAQAJAAIAAAAEAAYAAQAJAAIAAAAOAAUAAQAJAAIAAAA=")
tile_set = ExtResource("9_ilaip")

[node name="BGDim" type="Sprite2D" parent="BoardWorld"]
self_modulate = Color(1, 1, 1, 0.231373)
position = Vector2(518, 1103)
scale = Vector2(4.04297, 765)
texture = SubResource("GradientTexture1D_uo703")

[node name="CR" type="Label" parent="BoardWorld"]
offset_left = 142.0
offset_top = 556.0
offset_right = 264.0
offset_bottom = 613.0
text = "© 2025
Night Kolo"
label_settings = SubResource("LabelSettings_kf4b7")
horizontal_alignment = 2

[node name="BoardObjects" type="Node2D" parent="."]
scale = Vector2(1.7, 1.7)

[node name="Collision" type="TileMapLayer" parent="BoardObjects"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AAABAAAAAQAAAAQAAAABAAEAAQAAAAQAAAABAAIAAQAAAAQAAAABAAMAAQAAAAQAAAABAAQAAQAAAAQAAAABAAUAAQAAAAQAAAACAAUAAQAAAAQAAAADAAUAAQAAAAQAAAADAAYAAQAAAAQAAAADAAcAAQAAAAQAAAADAAgAAQAAAAQAAAAEAAgAAQAAAAQAAAAFAAgAAQAAAAQAAAAGAAgAAQAAAAQAAAAHAAgAAQAAAAQAAAAIAAgAAQAAAAQAAAAJAAgAAQAAAAQAAAAJAAcAAQAAAAQAAAAKAAcAAQAAAAQAAAALAAcAAQAAAAQAAAAMAAcAAQAAAAQAAAANAAcAAQAAAAQAAAANAAYAAQAAAAQAAAANAAUAAQAAAAQAAAANAAQAAQAAAAQAAAAMAAQAAQAAAAQAAAALAAQAAQAAAAQAAAAKAAQAAQAAAAQAAAAKAAMAAQAAAAQAAAALAAMAAQAAAAQAAAAMAAMAAQAAAAQAAAANAAMAAQAAAAQAAAAOAAMAAQAAAAQAAAAOAAQAAQAAAAQAAAAOAAUAAQAAAAQAAAAOAAYAAQAAAAQAAAAOAAcAAQAAAAQAAAAPAAcAAQAAAAQAAAAQAAcAAQAAAAQAAAAQAAgAAQAAAAQAAAARAAkAAQAAAAQAAAASAAkAAQAAAAQAAAAQAAkAAQAAAAQAAAATAAkAAQAAAAQAAAAUAAkAAQAAAAQAAAAVAAkAAQAAAAQAAAAVAAgAAQAAAAQAAAAVAAcAAQAAAAQAAAAWAAcAAQAAAAQAAAAXAAcAAQAAAAQAAAAYAAcAAQAAAAQAAAAYAAYAAQAAAAQAAAAYAAUAAQAAAAQAAAAYAAQAAQAAAAQAAAAYAAMAAQAAAAQAAAAYAAIAAQAAAAQAAAAYAAEAAQAAAAQAAAAYAAAAAQAAAAQAAAAXAAAAAQAAAAQAAAAWAAAAAQAAAAQAAAAVAAAAAQAAAAQAAAAUAAAAAQAAAAQAAAATAAAAAQAAAAQAAAASAAAAAQAAAAQAAAASAP//AQAAAAQAAAARAP//AQAAAAQAAAAQAP//AQAAAAQAAAAPAP//AQAAAAQAAAAOAP//AQAAAAQAAAANAP//AQAAAAQAAAAMAP//AQAAAAQAAAALAP//AQAAAAQAAAAKAP//AQAAAAQAAAAJAP//AQAAAAQAAAAIAP//AQAAAAQAAAAHAP//AQAAAAQAAAABAP//AQAAAAQAAAACAP//AQAAAAQAAAADAP//AQAAAAQAAAAEAP//AQAAAAQAAAAFAP//AQAAAAQAAAAGAP//AQAAAAQAAAA=")
tile_set = ExtResource("9_ilaip")

[node name="Bokobody" type="Node2D" parent="BoardObjects"]
unique_name_in_owner = true
position = Vector2(834.118, 304.706)
script = ExtResource("11_g01xb")
no_move = true

[node name="Block" parent="BoardObjects/Bokobody" instance=ExtResource("12_vfbvm")]

[node name="Block2" parent="BoardObjects/Bokobody" instance=ExtResource("12_vfbvm")]
position = Vector2(0, -45)

[node name="Block3" parent="BoardObjects/Bokobody" instance=ExtResource("12_vfbvm")]
position = Vector2(45, 0)

[node name="Block4" parent="BoardObjects/Bokobody" instance=ExtResource("12_vfbvm")]
position = Vector2(0, 45)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="BoardObjects/Bokobody"]
unique_name_in_owner = true
position = Vector2(21.4704, -0.000114441)
scale = Vector2(3.14704, 5.29412)

[node name="TitleArea" type="Area2D" parent="BoardObjects"]
unique_name_in_owner = true
position = Vector2(516.471, 66.4706)
collision_layer = 0
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoardObjects/TitleArea"]
shape = SubResource("RectangleShape2D_s2u48")

[node name="CreditArea" type="Area2D" parent="BoardObjects"]
unique_name_in_owner = true
position = Vector2(622.353, 66.4706)
collision_layer = 0
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoardObjects/CreditArea"]
shape = SubResource("RectangleShape2D_s2u48")

[node name="MedalUnlockedPopup" parent="." instance=ExtResource("4_xvmyf")]
